--- a/ImageGallery.Common/ImageGallery.Common.csproj
+++ b/ImageGallery.Common/ImageGallery.Common.csproj
@@ -7,5 +7,9 @@
   <ItemGroup>
     <PackageReference Include="CoreCompat.System.Drawing.v2" Version="5.2.0-preview1-r131" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ImageGallery.Model\ImageGallery.Model.csproj" />
+  </ItemGroup>
   
 </Project>
